Fixed Color Contrast Issue

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -33,8 +33,8 @@ h1 {
     display: block;
     text-align: center;
     width: 100%;
-    background-color: var(--secondary-color-transparent);
-    color: var(--accent2-color);
+    background-color: var(--accent1-color-transparent);
+    color: var(--primary-color);
     padding: 10px 0px;
     border-top: solid 3px var(--primary-color-transparent);
     border-bottom: solid 3px var(--primary-color-transparent);
